k8s/ingress/single-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-ingress
spec:
  backend:
    serviceName: docker-chat
    servicePort: 8080
